# rl-schedule-optimizer

./: Dockerfile  README.md  flight_scheduling.py  main.py  pyproject.toml  requirements.txt  revenue.py  schedule_optim.ipynb  schedule_optim_v0.ipynb  setup.py  utils.py
logs/: .monitor.csv
logs/PPO_1/: events.out.tfevents.1703343296.DESKTOP-EN0V6MQ.12308.0
schedule_optimizer/: flight_scheduling.py  flight_scheduling_backup.py  flight_scheduling_optimized.py  iterative_optimization.py  model_evaluation.py  performance_tests.py  revenue.py  utils.py
