[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-schedule-optimizer"
version = "0.1.0"
description = "Flight scheduling optimization using reinforcement learning"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy",
    "polars",
    "gymnasium",
    "stable-baselines3",
    "tensorboard",
    "matplotlib",
    "requests",
    "importlib-metadata; python_version < '3.10'",
    "plotly>=6.3.0",
    "pyarrow>=17.0.0",
    "nbformat>=5.10.4",
    "torch-geometric>=2.6.1",
    "torch>=2.5.1",
    "sb3-contrib>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
    "jupyter",
    "ipython",
]

[project.urls]
Homepage = "https://github.com/gabaid971/rl-schedule-optimizer"
Repository = "https://github.com/gabaid971/rl-schedule-optimizer"
Documentation = "https://github.com/gabaid971/rl-schedule-optimizer"
Issues = "https://github.com/gabaid971/rl-schedule-optimizer/issues"

[project.scripts]
schedule-optimizer = "scripts.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["schedule_optimizer*", "scripts*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
